[Media] Disable background video optimization for streaming videos

BUG=675282
TEST=manual

Review-Url: https://codereview.chromium.org/2610893004
Cr-Commit-Position: refs/heads/master@{#442147}

Former-commit-id: 102cdb66b3460080b67f5e27e2d7db9fc206c564