media/blink/webmediaplayer_impl.h
@@ -364,6 +364,9 @@ class MEDIA_BLINK_EXPORT WebMediaPlayerImpl
   // Returns true if the player is hidden.
   bool IsHidden() const;
 
+  // Returns true if the player's source is streaming.
+  bool IsStreaming() const;
+
   // Return whether |pipeline_metadata_| is compatible with an overlay. This
   // is intended for android.
   bool DoesOverlaySupportMetadata() const;
